# Ariadnion

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deny.toml
bundles/complete/: Cargo.toml
bundles/complete/src/: main.rs
bundles/edge/: Cargo.toml
bundles/edge/src/: main.rs
bundles/standard/: Cargo.toml
bundles/standard/src/: main.rs
crates/ariadnion-core/: Cargo.toml
crates/ariadnion-core/src/: bootstrap.rs  capability.rs  context.rs  error.rs  event.rs  health.rs  ids.rs  lib.rs  lifecycle.rs  module.rs  port.rs  resource.rs  shutdown.rs  version.rs
crates/optional/ariadnion-api-admin/: Cargo.toml
crates/optional/ariadnion-api-admin/src/: error.rs  lib.rs  model.rs
crates/optional/ariadnion-audit-domain/: Cargo.toml
crates/optional/ariadnion-audit-domain/src/: error.rs  ids.rs  lib.rs  migrations.rs  model.rs
crates/optional/ariadnion-audit-store/: Cargo.toml
crates/optional/ariadnion-audit-store/src/: error.rs  lib.rs  store.rs
crates/optional/ariadnion-auth-api-key/: Cargo.toml
crates/optional/ariadnion-auth-api-key/src/: error.rs  ids.rs  lib.rs  migrations.rs  model.rs  transition.rs
crates/optional/ariadnion-auth-password/: Cargo.toml
crates/optional/ariadnion-auth-password/src/: credential.rs  error.rs  hash.rs  lib.rs  migrations.rs  policy.rs  reset.rs  reset_debug.rs  secret.rs
crates/optional/ariadnion-auth-session/: Cargo.toml
crates/optional/ariadnion-auth-session/src/: error.rs  ids.rs  lib.rs  migrations.rs  model.rs  transition.rs
crates/optional/ariadnion-auth-session/src/model/: snapshot.rs
crates/optional/ariadnion-compose/: Cargo.toml
crates/optional/ariadnion-compose/src/: lib.rs
crates/optional/ariadnion-config-domain/: Cargo.toml
crates/optional/ariadnion-config-domain/src/: lib.rs
crates/optional/ariadnion-config-runtime/: Cargo.toml
crates/optional/ariadnion-config-runtime/src/: lib.rs
crates/optional/ariadnion-config-schema/: Cargo.toml
crates/optional/ariadnion-config-schema/src/: lib.rs
crates/optional/ariadnion-diagnostics/: Cargo.toml  module.toml
crates/optional/ariadnion-diagnostics/src/: lib.rs
crates/optional/ariadnion-invitation/: Cargo.toml
crates/optional/ariadnion-invitation/src/: error.rs  ids.rs  lib.rs  migrations.rs  model.rs  transition.rs
crates/optional/ariadnion-organization/: Cargo.toml
crates/optional/ariadnion-organization/src/: error.rs  ids.rs  lib.rs  migrations.rs  model.rs  transition.rs
crates/optional/ariadnion-organization/src/model/: reachability.rs
crates/optional/ariadnion-rbac/: Cargo.toml
crates/optional/ariadnion-rbac/src/: binding.rs  error.rs  evaluate.rs  ids.rs  lib.rs  migrations.rs  model.rs
crates/optional/ariadnion-rbac/src/model/: snapshot.rs
crates/optional/ariadnion-storage-asset/: Cargo.toml
crates/optional/ariadnion-storage-asset/src/: lib.rs
crates/optional/ariadnion-storage-backup/: Cargo.toml
crates/optional/ariadnion-storage-backup/src/: lib.rs  model.rs  port.rs
crates/optional/ariadnion-storage-domain/: Cargo.toml
crates/optional/ariadnion-storage-domain/src/: lib.rs
crates/optional/ariadnion-storage-maintenance/: Cargo.toml
crates/optional/ariadnion-storage-maintenance/src/: lib.rs
crates/optional/ariadnion-storage-migration/: Cargo.toml
crates/optional/ariadnion-storage-migration/src/: lib.rs  orchestrator.rs  registry.rs
crates/optional/ariadnion-storage-outbox/: Cargo.toml
crates/optional/ariadnion-storage-outbox/src/: lib.rs  model.rs  port.rs
crates/optional/ariadnion-storage-query/: Cargo.toml
crates/optional/ariadnion-storage-query/src/: data.rs  error.rs  lib.rs  schema.rs
crates/optional/ariadnion-storage-restore/: Cargo.toml
crates/optional/ariadnion-storage-restore/src/: lib.rs  model.rs
crates/optional/ariadnion-storage-rnmdb/: Cargo.toml  module.toml
crates/optional/ariadnion-storage-rnmdb/src/: audit_repository.rs  backup.rs  codec.rs  file_integrity.rs  identity_transaction.rs  index.rs  inspection.rs  instance.rs  lib.rs  location.rs  maintenance.rs  migration.rs  migration_definition.rs  migration_executor.rs  module.rs  outbox.rs  query.rs  restore.rs  secret_reference.rs  secret_reference_repository.rs  security.rs  session.rs  transaction.rs  udf.rs  upgrade.rs  user_repository.rs
crates/optional/ariadnion-storage-rnmdb/src/audit_repository/: chain.rs
crates/optional/ariadnion-storage-rnmdb/src/migration_definition/: canonical.rs
crates/optional/ariadnion-storage-rnmdb/src/user_repository/: decode.rs  evidence.rs  reconcile.rs  sql.rs
crates/optional/ariadnion-storage-rnmdb/src/user_repository/decode/: history.rs
crates/optional/ariadnion-storage-upgrade/: Cargo.toml
crates/optional/ariadnion-storage-upgrade/src/: lib.rs  model.rs  workflow.rs
crates/optional/ariadnion-user-domain/: Cargo.toml
crates/optional/ariadnion-user-domain/src/: lib.rs  migrations.rs
crates/optional/ariadnion-user-service/: Cargo.toml
crates/optional/ariadnion-user-service/src/: error.rs  lib.rs  service.rs
docs/operations/: storage.md
tools/ariadnion-xtask/: Cargo.toml
tools/ariadnion-xtask/src/: main.rs
tools/dependency-policy/: versions.toml
