[workspace]
resolver = "3"
members = ["crates/ariadnion-core"]
exclude = [
    "crates/optional/*",
    "bundles/*",
    "tools/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
ctrlc = { version = "3.5.0", features = ["termination"] }
