[package]
name = "ariadnion-bundle-complete"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
ariadnion-core = { path = "../../crates/ariadnion-core" }
ariadnion-compose = { path = "../../crates/optional/ariadnion-compose" }
ariadnion-diagnostics = { path = "../../crates/optional/ariadnion-diagnostics" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
