[package]
name = "ariadnion-api-admin"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
ariadnion-core = { path = "../../ariadnion-core" }
ariadnion-user-domain = { path = "../ariadnion-user-domain" }
ariadnion-organization = { path = "../ariadnion-organization" }
ariadnion-invitation = { path = "../ariadnion-invitation" }
ariadnion-auth-api-key = { path = "../ariadnion-auth-api-key" }
ariadnion-rbac = { path = "../ariadnion-rbac" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dev-dependencies]
ariadnion-auth-session = { path = "../ariadnion-auth-session" }
ariadnion-audit-domain = { path = "../ariadnion-audit-domain" }
ariadnion-audit-store = { path = "../ariadnion-audit-store" }

