[package]
name = "ariadnion-audit-store"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
ariadnion-audit-domain = { path = "../ariadnion-audit-domain" }
ariadnion-core = { path = "../../ariadnion-core" }
ariadnion-user-domain = { path = "../ariadnion-user-domain" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
