[package]
name = "ariadnion-storage-rnmdb"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace]

[dependencies]
ariadnion-audit-domain = { path = "../ariadnion-audit-domain" }
ariadnion-audit-store = { path = "../ariadnion-audit-store" }
ariadnion-core = { path = "../../ariadnion-core" }
ariadnion-organization = { path = "../ariadnion-organization" }
ariadnion-storage-backup = { path = "../ariadnion-storage-backup" }
ariadnion-storage-domain = { path = "../ariadnion-storage-domain" }
ariadnion-storage-maintenance = { path = "../ariadnion-storage-maintenance" }
ariadnion-storage-outbox = { path = "../ariadnion-storage-outbox" }
ariadnion-storage-query = { path = "../ariadnion-storage-query" }
ariadnion-storage-restore = { path = "../ariadnion-storage-restore" }
ariadnion-storage-upgrade = { path = "../ariadnion-storage-upgrade" }
ariadnion-user-domain = { path = "../ariadnion-user-domain" }
ariadnion-user-service = { path = "../ariadnion-user-service" }
hmac = "0.12.1"
rnmdb-common = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-common" }
rnmdb-types = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-types" }
rnmdb-sql = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-sql" }
rnmdb-planner = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-planner" }
rnmdb-executor = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-executor" }
rnmdb-txn = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-txn" }
rnmdb-index = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-index" }
rnmdb-fts = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-fts" }
rnmdb-catalog = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-catalog" }
rnmdb-storage = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-storage" }
rnmdb-udf = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-udf" }
rnmdb-security = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-security" }
rnmdb-instance = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-instance" }
rnmdb-server = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-server" }
rnmdb-cli = { git = "https://github.com/czxieddan/RNovModularDB.git", rev = "f07f1da2c1a193ad3732ee779d228ac8ec3dbffd", package = "rnmdb-cli" }
sha2 = "0.10.9"
zeroize = "1.9.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
